crates/daedalus/tests/ui/transport/fail_plugin_generic.stderr
error: plugin structs cannot be generic yet
 --> tests/ui/transport/fail_plugin_generic.rs:3:1
  |
3 | #[plugin(id = "test.generic_plugin")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `plugin` (in Nightly builds, run with -Z macro-backtrace for more info)
